reports/stull_radar.log
Traceback (most recent call last):
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/nbclient/client.py", line 1082, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/phil/mini38/envs/work/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/nbclient/client.py", line 535, in async_execute
    await self.async_execute_cell(
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/nbclient/client.py", line 827, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/phil/mini38/envs/work/lib/python3.8/site-packages/nbclient/client.py", line 735, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
if __name__=="__main__":
    #stull p. 246 sample appliation
    # given

    #coefficents for nexrad
    R1=2.17e-10#range factor, km, Stull 8.25
    Pt=750.e3 #transmitted power, W, stull p. 246
    b=14255 #equipment factor, Stull 8.26

    nexrad=dict(R1=R1,Pt=Pt,b=b)

    Z=1.e4  #Z of 40 dbZ
    R=20    #range of 20 km
    K2=0.93  #liquid water
    La=1   #no attenuation
    power_watts=findPr(Z,K2,La,R,**nexrad)
    the_text="""
           Stull problem on p. 246: start with 40 dbZ at 20 km and
           find Pr:
           Here is the Pr: {Prval:10.5g} Watts
           Here is  dbm -- decibels re 1 mWatt: {dBm:5.3f},
    """
    values={'Prval':power_watts,'dBm':10*log10(power_watts*1.e3)}
    print   the_text.format(**values)
------------------

[0;36m  File [0;32m"<ipython-input-3-b3e4f4e0d80d>"[0;36m, line [0;32m24[0m
[0;31m    print   the_text.format(**values)[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-3-b3e4f4e0d80d>, line 24)

